--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = adafruit/Adafruit MQTT Library@^2.4.2
+lib_deps = 
+	adafruit/Adafruit MQTT Library@^2.4.2
+	mbed-autonomoustuff/mcp2515@0.0.0+sha.5a3fdb039965
